fix radio button alignment

--- a/css/chess.css
+++ b/css/chess.css
@@ -13,7 +13,8 @@
 #chessboard {
 	max-width: 500px;
 	width: 100%;
-	height: auto;
+	/*width: auto;*/
+	/*height: auto;*/
 	/*height: 100%;*/
 	/*width: 500px;*/
 	/*height: 500px;*/
